<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.NhanXeCustomerInfoActivity">
    <data>
        <variable
            name="Customer"
            type="com.example.centergaragemanagementsystem.dataClass.Customer" />
        <variable
            name="Service"
            type="com.example.centergaragemanagementsystem.dataClass.Service" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#303030"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="370dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bottom_border"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start|center_vertical"
            android:text="@string/customer_info"
            android:textColor="#C4C4C4"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/number_one_inside_a_circle_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start|center_vertical"
                    android:text="@string/full_name"
                    android:textColor="#C4C4C4"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="380dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corner"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="start|center_horizontal|center_vertical"
                    android:hint="@string/name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@{Customer.name}"
                    android:textColor="#000000"
                    android:textColorHint="#66000000"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start|center_vertical"
                    android:text="@string/phone_number"
                    android:textColor="#C4C4C4"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etName" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="380dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corner"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="start|center_horizontal|center_vertical"
                    android:hint="@string/phone_hint"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:text="@{Customer.phone}"
                    android:textColor="#000000"
                    android:textColorHint="#66000000"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start|center_vertical"
                    android:text="@string/email"
                    android:textColor="#C4C4C4"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPhone" />

                <EditText
                    android:id="@+id/etMail"
                    android:layout_width="380dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corner"
                    android:editable="false"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="start|center_horizontal|center_vertical"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@{Customer.email}"
                    android:textColor="#000000"
                    android:textColorHint="#66000000"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="185dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/continue_text"
                    app:backgroundTint="#C90F0F"
                    app:cornerRadius="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNote"
                    app:strokeColor="#E5E5E5"
                    app:strokeWidth="1dp" />

                <EditText
                    android:id="@+id/etNote"
                    android:layout_width="380dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corner"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="start|center_horizontal|top|center_vertical"
                    android:hint="@string/note_hint"
                    android:importantForAutofill="no"
                    android:inputType="textLongMessage"
                    android:textColor="#000000"
                    android:textColorHint="#66000000"
                    android:textSize="22sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start|center_vertical"
                    android:text="@string/note"
                    android:textColor="#C4C4C4"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etMail"
                    tools:layout_constraintLeft_toLeftOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
