<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activity.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome"
        android:textColor="@color/grey_text_on_dark_back_ground"
        android:textSize="64sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center_horizontal"
        android:text="@string/client_app_description_text"
        android:textAlignment="center"
        android:textColor="@color/grey_text_on_dark_back_ground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />


    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="Điền thông tin tài khoản"
        android:textAlignment="center"

        android:textColor="@color/grey_text_on_dark_back_ground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/register_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="227dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_name_edit_text"
        style="@style/login_register_form"
        android:hint="Họ và tên đầy đủ (Có dấu)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_phone_num_edit_text"
        style="@style/login_register_form"
        android:hint="Nhập số điện thoại liên lạc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_email_edit_text"
        style="@style/login_register_form"
        android:hint="Email hoặc tên tài khoản"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_num_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_password_edit_text"
        style="@style/login_register_form"
        android:hint="Mật khẩu đăng nhập"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_edit_text"
        android:inputType="textPassword"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_password_confirm_edit_text"
        style="@style/login_register_form"
        android:hint="Nhập lại mật khẩu"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_edit_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="289dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/remember_password_text"
        android:textColor="@color/grey_text_on_dark_back_ground"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/register_password_confirm_edit_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />

    <Button
        android:id="@+id/register_confirm_button"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/reddish_button_background"
        android:text="@string/continue_text"
        app:backgroundTint="@color/reddish_button_color"
        app:cornerRadius="30dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/forgot_password_text"
        style="@style/normal_grey_text_on_dark_background"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password_prompt_text"
        app:layout_constraintStart_toEndOf="@+id/register_confirm_button"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />


    <ProgressBar
        android:id="@+id/register_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>